# pynep_cpu

./: MANIFEST.in  README.md  dftd3para.h  nep.cpp  nep.h  nep_cpu.cpp  pyproject.toml  requirements.txt  setup.py  structure.py
.github/workflows/: python-publish.yml
src/nep_cpu/: nep.cpp  nep.h  nep_cpu.cpp
src/pynep_cpu/: calculator.py
