[build-system]
requires = [
"wheel",
"numpy",
"setuptools>=68.0.0",
"pybind11>=2.12.0",
"setuptools-scm>=8.2.0"
]
build-backend = "setuptools.build_meta"


[project]
name = "pynep_cpu"
authors = []
dynamic = ["version"]

description = """

"""
readme = "README.md"
requires-python = ">=3.8,<3.13"
license= { "text"="GPL-3.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [


"numpy ",

"ase",

]


[project.urls]
Homepage = "https://github.com/tamaswells/pynep_cpu"
Documentation = "https://github.com/tamaswells/pynep_cpu"
Repository = "https://github.com/tamaswells/pynep_cpu"
Issues = "https://github.com/tamaswells/pynep_cpu/issues"





[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["pynep_cpu", "pynep_cpu.*" ]

[tool.setuptools.package-data]
"pynep_cpu" = ["ptable.json" ]

[tool.setuptools_scm]

# 可选配置（根据需求调整）：
# - 指定 Git 标签格式（默认匹配 v*）
tag_regex = "^v(?P<version>[0-9.]+(?:b[0-9]+)?)$"
# - 启用本地版本号（开发时生成 dev 版本）
local_scheme = "no-local-version"  # 或 "node-and-date"

write_to = "src/pynep_cpu/_version.py"

[tool.cibuildwheel.linux]
archs = ["auto64"]

